# axum-sea-orm

./: .gitignore  Cargo.toml  dot.env
entity/: Cargo.toml
entity/src/: comment.rs  mod.rs  post.rs  prelude.rs  user.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250217_153113_create_posts_table.rs  m20250217_153204_create_comments_table.rs
src/: main.rs
src/handlers/: auth_handlers.rs  mod.rs  post_handler.rs  user_handlers.rs
src/models/: post.rs  user.rs
src/routes/: auth_router.rs  home_routes.rs  mod.rs  user_routes.rs
src/utils/: constants.rs  errors.rs  guard.rs  jwt.rs  mod.rs
