[package]
name = "axum-sea-orm"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
axum = "0.8.1"
chrono = "0.4.39"
sea-orm = { version = "1.1.4", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.13.1", features = ["v4"] }
serde = "1.0.217"
sea-query = "0.32.1"
tower-http = { version = "0.6.2", features = ["cors"] }
dotenv = "0.15.0"
lazy_static = "1.5.0"
